# chalk

./: Cargo.toml  README.md  chalk-260cb027a7085355.js  chalk-260cb027a7085355_bg.wasm  chalk-3ffb63fdf2e3c083.js  chalk-3ffb63fdf2e3c083_bg.wasm  chalk-527e86da6a59a5e0.js  chalk-527e86da6a59a5e0_bg.wasm  chalk-72f8f19d8ade815c.js  chalk-72f8f19d8ade815c_bg.wasm  chalk-a96e22380a7af651_bg.wasm  chalk-afdc2eff34f6fbd3.js  chalk-afdc2eff34f6fbd3_bg.wasm  chalk-db37d1ad4e8f514c.js  chalk-db37d1ad4e8f514c_bg.wasm  chalk-dc6f75b3c73b5e0e.js  chalk-dc6f75b3c73b5e0e_bg.wasm  chalk-e0448f966ff03dc9.js  chalk-e0448f966ff03dc9_bg.wasm  chalk-f688af534d834c58.js  chalk-f688af534d834c58_bg.wasm  index.html
.github/workflows/: deploy.yml
chalk/: index.html
src/: app.rs  main.rs  signals.rs  utils.rs
src/canvas/: action.rs  controller.rs  drawing.rs  history.rs  mod.rs  renderer.rs  state.rs  styles.rs  tool.rs  types.rs  whiteboard.rs
src/canvas/background/: dots.rs  grids.rs  mod.rs
src/canvas/primitives/: geometry.rs  handle.rs  mod.rs  renderer.rs  shape.rs  style.rs  transform.rs
src/canvas/primitives/collections/: grid.rs  mod.rs  network.rs
src/ui/: blocks.rs  color.rs  keybindings.rs  layout.rs  macros.rs  mod.rs  overlay.rs
src/ui/components/: box_component.rs  button.rs  config_popup.rs  dropdown.rs  generation.rs  hint.rs  image.rs  mod.rs  palette.rs  portal.rs  zoom_display.rs
