[package]
name = "chalk"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.19", features = ["csr"] }
wasm-bindgen = "0.2.121"
web-sys = { version = "0.3.98", features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "HtmlCanvasElement",
  "HtmlHeadElement",
  "MediaQueryList",
  "MouseEvent",
  "Node",
  "NodeList",
  "OffscreenCanvas",
  "OffscreenCanvasRenderingContext2d",
  "Performance",
  "PointerEvent",
  "WheelEvent",
  "Window",
] }
